Made improvements to output a pickle file containing data from training the quantum circuit such as best loss value, best parameters, etc, added options for optimiser.

--- a/testing_ground/vqe_pennylane_CH4.ipynb
+++ b/testing_ground/vqe_pennylane_CH4.ipynb
@@ -34,6 +34,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "6ece5a3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "test_arr = np.array([2, 0, 0, 0])\n",
+    "torch_arr = torch.Tensor([2, 0, 0, 0])\n",
+    "\n",
+    "np.argmax(torch_arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "f2bf61ab",
    "metadata": {},
