Reformatted yaml parameters, molecular dataset values and ansatz configuration parameters into one dictionary. Reformatting all relevant functions that take arguments to take the master dictionary containing all required inputs to allow flexibility in inputs.

--- a/testing_ground/vqe_pennylane_CH4.ipynb
+++ b/testing_ground/vqe_pennylane_CH4.ipynb
@@ -1457,13 +1457,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "2015e142",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load in dataset for methane molecule.\n",
-    "dataset = qml.data.load(\"qchem\", molname=\"CH2\", bondlength=1.085, basis=\"STO-3G\", attributes=[\"fci_energy\", \"hamiltonian\"])"
+    "dataset = qml.data.load(\"qchem\", molname=\"CH2\", bondlength=1.085, basis=\"STO-3G\", attributes=[\"fci_energy\", \"hamiltonian\", \"molecule\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "f7f2e1a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset[0].molecule.n_electrons"
    ]
   },
   {
