Added manual eigensolver to find ground state energy to allow plot to show assumed ground state energy for manual inputs data type.

--- a/testing_ground/testing.ipynb
+++ b/testing_ground/testing.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "fa0d12a2",
    "metadata": {},
    "outputs": [],
@@ -31,6 +31,61 @@
     "\n",
     "from pennylane import numpy as np"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3afe1eac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.complex128"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "symbols = [\"Li\", \"H\"]\n",
+    "geometry = np.array([[0.0, 0.0, 0.0], [0.0, 0.0, 2.969280527]])\n",
+    "molecule = qml.qchem.Molecule(symbols, geometry)\n",
+    "\n",
+    "H, qubits = qml.qchem.molecular_hamiltonian(\n",
+    "    molecule,\n",
+    "    active_electrons=2,\n",
+    "    active_orbitals=5\n",
+    ")\n",
+    "\n",
+    "H_matrix = H.sparse_matrix()\n",
+    "\n",
+    "H_sparse = qml.SparseHamiltonian(H_matrix, range(qubits))\n",
+    "eigvalues = H_sparse.eigvals()\n",
+    "ground_state_energy = np.min(eigvalues)\n",
+    "type(ground_state_energy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "8366449b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-7.88244391372437"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
