Added batching and fixed bug with title with graphs.

--- a/testing_ground/testing.ipynb
+++ b/testing_ground/testing.ipynb
@@ -34,6 +34,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "70842315",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import yaml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e9bae68c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "batch_yaml_filepath = \"../batch.yaml\"\n",
+    "\n",
+    "with open(batch_yaml_filepath, 'r') as file:\n",
+    "    config = yaml.safe_load(file)\n",
+    "\n",
+    "molecule_name_batch = config[\"preset\"][\"molecule_name\"]\n",
+    "bond_length_batch = config[\"preset\"][\"bond_length\"]\n",
+    "# batch_elements = [zip(molecule_name_batch[i], bond_length_batch[i]) for i in range(len(molecule_name_batch))]\n",
+    "type(bond_length_batch[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e04915a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "3afe1eac",
    "metadata": {},
