Made some update in testing to implement DFT side of code. Improved the customisability of the exchange correlation functional but hit a road block regarding taking the reduced density matrices formed from the VQE calculation and utilising it to form a new exchange correlation functional.

--- a/testing_ground/testing.ipynb
+++ b/testing_ground/testing.ipynb
@@ -2470,6 +2470,92 @@
     "pennylane_hamiltonian = qml.import_operator(pauli_hamiltonian)\n",
     "pennylane_hamiltonian\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "eedae74b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exchange correlation functional HF*0.2 + .08*LDA + .72*B88, .81*LYP + .19*VWN\n",
+      "converged SCF energy = -1.15861747506767\n",
+      "Kohn sham orbitals/ coefficients of atomic orbitals for molecular orbitals [[ 0.54884228  1.21245192]\n",
+      " [ 0.54884228 -1.21245192]]\n",
+      "Hamiltonian [[-1.12095946 -0.95937577]\n",
+      " [-0.95937577 -1.12095946]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyscf import gto, dft, ao2mo\n",
+    "from openfermion import FermionOperator, get_fermion_operator\n",
+    "from openfermion.transforms import jordan_wigner\n",
+    "import pennylane as qml\n",
+    "import numpy as np\n",
+    "\n",
+    "# Define the molecule\n",
+    "mol = gto.Mole()\n",
+    "mol.atom = 'H 0 0 0; H 0 0 0.74'\n",
+    "mol.basis = 'sto-3g'\n",
+    "mol.build()\n",
+    "\n",
+    "# Perform DFT calculation with LDA\n",
+    "mf = dft.RKS(mol)\n",
+    "# mf.xc = 'HF*0.0 + LDA*0.0 + B88*0.0, LYP*0.0 + VWN*0.0'\n",
+    "mf.xc = 'HF*0.2 + .08*LDA + .72*B88, .81*LYP + .19*VWN'\n",
+    "# mf.xc = \"lda\"\n",
+    "print(\"Exchange correlation functional\", mf.xc)\n",
+    "mf.kernel()\n",
+    "\n",
+    "# All steps are handled by DFT calculations, we just have to convert to MO basis and create second quanitsed hamiltonian\n",
+    "\n",
+    "# Extract Kohn-Sham orbitals\n",
+    "ks_orbitals = mf.mo_coeff\n",
+    "print(\"Kohn sham orbitals/ coefficients of atomic orbitals for molecular orbitals\", ks_orbitals)\n",
+    "\n",
+    "# Compute one-electron integrals (kinetic + potential energy) in MO basis\n",
+    "hcore = mf.get_hcore()\n",
+    "print(\"Hamiltonian\", hcore)\n",
+    "h1_mo = np.dot(ks_orbitals.T, np.dot(hcore, ks_orbitals))\n",
+    "\n",
+    "# Compute two-electron integrals in AO basis and transform to MO basis\n",
+    "eri_ao = ao2mo.kernel(mol, ks_orbitals)\n",
+    "eri_mo = ao2mo.restore(1, eri_ao, mol.nao_nr())\n",
+    "\n",
+    "# Number of orbitals\n",
+    "n_orbitals = ks_orbitals.shape[1]\n",
+    "\n",
+    "# Create the Hamiltonian as a FermionOperator\n",
+    "second_quantized_hamiltonian = FermionOperator()\n",
+    "\n",
+    "# Add one-electron terms\n",
+    "for i in range(n_orbitals):\n",
+    "    for j in range(n_orbitals):\n",
+    "        if i <= j:  # Only include each term once\n",
+    "            second_quantized_hamiltonian += FermionOperator(((i, 1), (j, 0)), h1_mo[i, j])\n",
+    "\n",
+    "# Add two-electron terms\n",
+    "for i in range(n_orbitals):\n",
+    "    for j in range(n_orbitals):\n",
+    "        for k in range(n_orbitals):\n",
+    "            for l in range(n_orbitals):\n",
+    "                if i <= j and k <= l:  # Avoid double-counting\n",
+    "                    hijkl = eri_mo[i, j, k, l] - eri_mo[i, j, l, k]\n",
+    "                    if hijkl != 0:\n",
+    "                        term = FermionOperator(((i, 1), (j, 1), (l, 0), (k, 0)), 0.5 * hijkl)\n",
+    "                        term += FermionOperator(((i, 1), (k, 1), (l, 0), (j, 0)), 0.5 * hijkl)\n",
+    "                        second_quantized_hamiltonian += term\n",
+    "\n",
+    "# Apply Jordan-Wigner transformation to map Fermionic Hamiltonian to Pauli strings\n",
+    "pauli_hamiltonian = jordan_wigner(second_quantized_hamiltonian)\n",
+    "\n",
+    "pennylane_hamiltonian = qml.import_operator(pauli_hamiltonian)\n",
+    "# pennylane_hamiltonian\n"
+   ]
   }
  ],
  "metadata": {
